Created index and catalogue

--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-Init message
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <a href="#">Главная</a>
+    <a href="info/catalogue.html">Каталог</a>
+    <a href="info/contacts.html">Контакты</a>
+    
+</body>
+</html>
