--- a/catalogue/catalogue.html
+++ b/catalogue/catalogue.html
@@ -6,14 +6,14 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="#">Главная</a>
-    <a href="catalogue/catalogue.html">Каталог</a>
+    <a href="index.html">Главная</a>
+    <a href="#">Каталог</a>
     <a href="info/contacts.html">Контакты</a>
     <h1>Каталог</h1>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit ipsam ipsa maxime odio, sed eveniet maiores quia debitis eligendi accusantium quae illo esse nemo obcaecati laudantium ratione sit magni tempore officia! Nesciunt consectetur quasi cum sapiente, voluptatibus culpa animi consequatur inventore, veritatis ipsa architecto non quas nobis rerum nostrum numquam sequi quaerat maiores necessitatibus voluptatum dolor asperiores qui. Voluptatibus, itaque. Accusamus a ratione, quasi accusantium dicta quia voluptatibus sapiente ea! Vel tenetur quia sequi error quidem libero expedita beatae architecto reiciendis consequatur a iste maiores maxime eveniet ipsum commodi rerum quasi, similique corrupti labore odio fugiat? Fuga repellat nam quas dolorem voluptatum unde, laudantium in vitae adipisci! Sint doloribus nobis eos accusamus hic in earum esse, laboriosam pariatur quae exercitationem adipisci inventore aliquid laudantium repellat facere molestiae animi delectus? Modi officiis natus, hic voluptatum reiciendis omnis eaque impedit dolore veritatis amet. Molestiae, consequatur libero. Eos voluptatibus delectus ipsa laboriosam nisi.</p>
-    <src href="img/Sunflower.jpeg">Sunflower</src>
+    <img src="img/Sunflower.jpeg">Sunflower</img>
     <p>Вы можете купить этот замечательный, жизнерадостный подсолнух, готовый поделиться с вами спелыми семечками и хорошим настроением</p> 
-    <scr href="img/Eifel_tower">Eifel Tower</scr>
-    <src>Эйфелева Башня или её запчасти продаются только по договоренности. Для покупки башни целиком или по частям, вам нужно обратиться по адресу г. Париж, Елисейские поля, д.3, кв. 31. Последовательность звонков в дверь: 5 коротких, 2 длинных, 1 короткий + постучать кулаком 3 раза. Когда ответят - скажите, что пришли проведать Жерома. Звонки и письма не принимаются, надеемся на понимание. </src>
+    <img src="img/Eifel_tower.jpeg">Eifel Tower</img>
+    <p>Эйфелева Башня или её запчасти продаются только по договоренности. Для покупки башни целиком или по частям, вам нужно обратиться по адресу г. Париж, Елисейские поля, д.3, кв. 31. Последовательность звонков в дверь: 5 коротких, 2 длинных, 1 короткий + постучать кулаком 3 раза. Когда ответят - скажите, что пришли проведать Жерома. Звонки и письма не принимаются, надеемся на понимание. </p>
 </body>
 </html>
