--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
 </head>
 <body>
     <a href="#">Главная</a>
-    <a href="info/catalogue.html">Каталог</a>
+    <a href="https://lesovba.github.io/catalogue/catalogue.html">Каталог</a>
     <a href="info/contacts.html">Контакты</a>
-    
+    <h1>Главная страница</h1>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut suscipit veniam soluta dolores eveniet maxime accusantium, debitis magni atque, quisquam doloribus deleniti unde aliquam temporibus sint ex. Unde, non molestiae.</p>
+    <h2>Добро пожаловать на сайт</h2>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut suscipit veniam soluta dolores eveniet maxime accusantium, debitis magni atque, quisquam doloribus deleniti unde aliquam temporibus sint ex. Unde, non molestiae.</p>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut suscipit veniam soluta dolores eveniet maxime accusantium, debitis magni atque, quisquam doloribus deleniti unde aliquam temporibus sint ex. Unde, non molestiae.</p>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut suscipit veniam soluta dolores eveniet maxime accusantium, debitis magni atque, quisquam doloribus deleniti unde aliquam temporibus sint ex. Unde, non molestiae.</p>
+  
 </body>
 </html>
