Placed the FB form on Contacts page

--- a/info/contacts.html
+++ b/info/contacts.html
@@ -9,6 +9,21 @@
     <a href="https://lesovba.github.io/index.html">Главная</a>
     <a href="https://lesovba.github.io/catalogue/catalogue.html">Каталог</a>
     <a href="#">Контакты</a>    
-    <h1>Under construction</h1>
+    <h1>Feedback form</h1>
+    <form action="post">
+        <p>
+        <label>Name: <input type="text" name="firstname"/>
+        </label>
+        </p>
+        <p>
+            <label>E-mail: <input type="email"/>
+                </label>
+            </p>
+        <p>
+            <label>Your Question: <input type="text"/></label>
+            <button onclick="SubmitEvent"> </button>
+        </p>
+    </form>
+
 </body>
 </html>
