Added submit button

--- a/info/contacts.html
+++ b/info/contacts.html
@@ -21,7 +21,7 @@
             </p>
         <p>
             <label>Your Question: <input type="text"/></label>
-            <button onclick="SubmitEvent"> </button>
+            <button type="submit">Submit</button>
         </p>
     </form>
 
