--- a/info/contacts.html
+++ b/info/contacts.html
@@ -20,7 +20,8 @@
                 </label>
             </p>
         <p>
-            <label>Your Question: <input type="text"/></label>
+            <label>Your Question: <input type="text" width="300"
+                height="200"/></label>
             <button type="submit">Submit</button>
         </p>
     </form>
