Created CSS file

--- a/info/contacts.html
+++ b/info/contacts.html
@@ -16,12 +16,10 @@
         </label>
         </p>
         <p>
-            <label>E-mail: <input type="email"/>
-                </label>
-            </p>
+            <label> E-mail: <input type="email"/> </label>
+        </p>
         <p>
-            <label>Your Question: <input type="text" width="300"
-                height="200"/></label>
+            <label> Your Question: <input type="text" width="300" height="200"/></label>
             <button type="submit">Submit</button>
         </p>
     </form>
