Designated link classes

--- a/catalogue/catalogue.html
+++ b/catalogue/catalogue.html
@@ -6,9 +6,9 @@
     <title>Предметы различной величины и предназначения</title>
 </head>
 <br>
-    <a href="https://lesovba.github.io/index.html">Главная</a>
-    <a href="#">Каталог</a>
-    <a href="https://lesovba.github.io/info/contacts.html">Контакты</a>
+    <a class="link_styles" href="https://lesovba.github.io/index.html">Главная</a>
+    <a class="link_styles" href="#">Каталог</a>
+    <a class="link_styles" href="https://lesovba.github.io/info/contacts.html">Контакты</a>
     <h1>Каталог</h1>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit ipsam ipsa maxime odio, sed eveniet maiores quia debitis eligendi accusantium quae illo esse nemo obcaecati laudantium ratione sit magni tempore officia! Nesciunt consectetur quasi cum sapiente, voluptatibus culpa animi consequatur inventore, veritatis ipsa architecto non quas nobis rerum nostrum numquam sequi quaerat maiores necessitatibus voluptatum dolor asperiores qui. Voluptatibus, itaque. Accusamus a ratione, quasi accusantium dicta quia voluptatibus sapiente ea! Vel tenetur quia sequi error quidem libero expedita beatae architecto reiciendis consequatur a iste maiores maxime eveniet ipsum commodi rerum quasi, similique corrupti labore odio fugiat? Fuga repellat nam quas dolorem voluptatum unde, laudantium in vitae adipisci! Sint doloribus nobis eos accusamus hic in earum esse, laboriosam pariatur quae exercitationem adipisci inventore aliquid laudantium repellat facere molestiae animi delectus? Modi officiis natus, hic voluptatum reiciendis omnis eaque impedit dolore veritatis amet. Molestiae, consequatur libero. Eos voluptatibus delectus ipsa laboriosam nisi.</p>
     <img src="../img/Sunflower.jpeg" alt="1. Подсолнух"><br>1. Подсолнух</br></img>
