--- a/info/contacts.html
+++ b/info/contacts.html
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="https://lesovba.github.io/index.html">Главная</a>
-    <a href="https://lesovba.github.io/catalogue/catalogue.html">Каталог</a>
+    <a class="link_styles" href="https://lesovba.github.io/index.html">Главная</a>
+    <a class="link_styles" href="https://lesovba.github.io/catalogue/catalogue.html">Каталог</a>
     <a href="#">Контакты</a>    
     <h1>Feedback form</h1>
     <form action="post">
