Added classes and styles

--- a/info/contacts.html
+++ b/info/contacts.html
@@ -11,14 +11,14 @@
     <a href="#">Контакты</a>    
     <h1>Feedback form</h1>
     <form action="post">
-        <p>
+        <p class="default_txt">
         <label>Name: <input type="text" name="firstname"/>
         </label>
         </p>
-        <p>
+        <p class="default_txt">
             <label> E-mail: <input type="email"/> </label>
         </p>
-        <p>
+        <p class="default_txt">
             <label> Your Question: <input type="text" width="300" height="200"/></label>
             <button type="submit">Submit</button>
         </p>
