--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Главная страница</title>
 </head>
 <body>
     <a class="link_styles" href="#">Главная</a>
     <a class="link_styles" href="https://lesovba.github.io/catalogue/catalogue.html">Каталог</a>
     <a class="link_styles" href="https://lesovba.github.io/info/contacts.html">Контакты</a>
-    <h1>Главная страница</h1>
+    <h1 class="main_header">Главная страница</h1>
     <p class="default_txt">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut suscipit veniam soluta dolores eveniet maxime accusantium, debitis magni atque, quisquam doloribus deleniti unde aliquam temporibus sint ex. Unde, non molestiae.</p>
     <h2 class="welcome">Добро пожаловать на сайт</h2>
     <p class="default_txt">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut suscipit veniam soluta dolores eveniet maxime accusantium, debitis magni atque, quisquam doloribus deleniti unde aliquam temporibus sint ex. Unde, non molestiae.</p>
