--- a/info/contacts.html
+++ b/info/contacts.html
@@ -9,7 +9,7 @@
     <a class="link_styles" href="https://lesovba.github.io/index.html">Главная</a>
     <a class="link_styles" href="https://lesovba.github.io/catalogue/catalogue.html">Каталог</a>
     <a href="#">Контакты</a>    
-    <h1>Feedback form</h1>
+    <h1 class="main_header">Feedback form</h1>
     <form action="post">
         <p class="default_txt">
         <label>Name: <input type="text" name="firstname"/>
