Updated CSS links in all files

--- a/catalogue/catalogue.html
+++ b/catalogue/catalogue.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Предметы различной величины и предназначения</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <br>
     <a class="link_styles" href="https://lesovba.github.io/index.html">Главная</a>
