--- a/index.html
+++ b/index.html
@@ -5,6 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Главная страница</title>
     <link rel="stylesheet" href="style.css">
+        <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-D6KMLVZHYW"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-D6KMLVZHYW");
+    </script>
 </head>
 <body>
     <a class="link_styles" href="#">Главная</a>
