Added GTAG Comments.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Главная страница</title>
     <link rel="stylesheet" href="style.css">
+     <!-- Google tag (gtag.js) -->
         <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=G-D6KMLVZHYW"
@@ -18,6 +19,7 @@
 
       gtag("config", "G-D6KMLVZHYW");
     </script>
+     <!-- Google tag (gtag.js) -->
 </head>
 <body>
        <!-- Yandex.Metrika counter -->
