Updated JS-goals and params

--- a/catalogue/catalogue.html
+++ b/catalogue/catalogue.html
@@ -54,6 +54,12 @@
         trackLinks: true,
         accurateTrackBounce: true,
         webvisor: true,
+        userParams: {
+          vip_status: true,
+          child: 1,
+          child_age: 13,
+          UserID: 'Me'
+    }
       });
     </script>
     <noscript
