--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
     <a class="link_styles" href="https://lesovba.github.io/catalogue/catalogue.html">Каталог</a>
     <a class="link_styles" href="https://lesovba.github.io/info/contacts.html">Контакты</a>
     <h1 class="main_header">Главная страница</h1>
-    <p class="default_txt">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut suscipit veniam soluta dolores eveniet maxime accusantium, debitis magni atque, quisquam doloribus deleniti unde aliquam temporibus sint ex. Unde, non molestiae.</p>
+    <p class="default_txt">DEFAULT TEXT</p>
     <h2 class="welcome">Добро пожаловать на сайт</h2>
-    <p class="default_txt">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut suscipit veniam soluta dolores eveniet maxime accusantium, debitis magni atque, quisquam doloribus deleniti unde aliquam temporibus sint ex. Unde, non molestiae.</p>
-    <p class="default_txt">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut suscipit veniam soluta dolores eveniet maxime accusantium, debitis magni atque, quisquam doloribus deleniti unde aliquam temporibus sint ex. Unde, non molestiae.</p>
+    <p class="default_txt">Block 2</p>
+    <p class="default_txt">Block 3</p>
     <p class="default_txt">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut suscipit veniam soluta dolores eveniet maxime accusantium, debitis magni atque, quisquam doloribus deleniti unde aliquam temporibus sint ex. Unde, non molestiae.</p>
 
 </body>
