Added URL Parameters to reachGoal

--- a/info/contacts.html
+++ b/info/contacts.html
@@ -69,7 +69,7 @@
     <a class="link_styles" href="https://lesovba.github.io/catalogue/catalogue.html">Каталог</a>
     <a href="#">Контакты</a>    
     <h1 class="main_header">Feedback form</h1>
-    <form class="contacts_form" action="get" onsubmit="ym(97670770, 'reachGoal', 'form_submit'); return true;">
+    <form class="contacts_form" action="get" onsubmit="ym(97670770, 'reachGoal', 'form_submit', {URL: document.location.href}); return true;">
         <p class="name_input">
         <label>Name: <input class="form_text" name="firstname"/>
         </label>
